test/bad/functions/type01.px

func f(x: Int) def
    return

func g(x: String) def
    return

h = f
h = g
